Changed color theme

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
     <body>
         <style>
             body {
-                background-color: black;
-                color: rgb(209, 209, 209);
+                background-color:#FAF4E3; 
+                color:#A5A68F;
+                font-size: 32pt;
+                width: 100vw;
+                height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;/*hides scroll bars */ 
             }
         </style>
         <div id = "app"></div>
