--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
             const app = document.getElementById("app")
             const root = ReactDOM.createRoot(app)
 
-            root.render(<h1>"Develop. Preview. Ship."</h1>)
+            function Header () {
+                return <h1>"Develop. Preview. Ship."</h1>
+            }
+
+            function HomePage () {
+                return (
+                    <div>
+                        <Header />
+                    </div>
+                    )
+            }
+
+            root.render(<HomePage />)
         </script>
     </body>
 </html>
