--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <body>
         <style>
             body {
-                background-color:#FAF4E3; 
-                color:#A5A68F;
+                background-color:#1D3973; 
+                font-family:"Arial";
+                color:#F2F2F2;
                 font-size: 32pt;
                 width: 100vw;
                 height: 100vh;
@@ -11,6 +12,22 @@
                 align-items: center;
                 justify-content: center;
                 overflow: hidden;/*hides scroll bars */ 
+            }
+
+            #btnLike {
+                padding:12px;
+                padding-right:24px;
+                background-color: #182E59;
+                color: inherit;
+                font-size: 12pt;
+                border: 1px solid #F2F2F2;
+                transition: background-color 0.25s linear, color 0.25s linear;
+            }
+
+            #btnLike:hover {
+                color: #182E59;
+                border-color:#182E59;
+                background-color: #F2F2F2;
             }
         </style>
         <div id = "app"></div>
@@ -21,17 +38,26 @@
         <script type="text/jsx">
             const app = document.getElementById("app")
             const root = ReactDOM.createRoot(app)
-
-            function Header () {
-                return <h1>"Develop. Preview. Ship."</h1>
+            const likes = 0;
+            const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton']
+            function Header ({title}) {
+                return <h1>{title}</h1>
             }
 
             function HomePage () {
                 return (
                     <div>
-                        <Header />
+                        <Header title="Hello World!"/>
+                        <ul id="list">
+                            {names.map(
+                                (name)=>{
+                                    return <li key={name}>{name}</li>
+                                })
+                            }
+                        </ul>
+                        <button id="btnLike">Likes {likes}</button>
                     </div>
-                    )
+                )
             }
 
             root.render(<HomePage />)
@@ -39,4 +65,6 @@
     </body>
 </html>
 
+
+<!---->
 <!-- on CHAPTER 5-->
